src/objects/Box_Folder__mdt.object
<CustomObject>
    <description>IQVIACBEX-339</description>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
		<description>ESPSFDCQI-17879</description>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <referenceTo>Box_Object__mdt</referenceTo>
        <relationshipLabel>Box Folders</relationshipLabel>
        <relationshipName>Box_Folders</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Parent_Folder__c</fullName>
        <label>Parent Folder</label>
        <referenceTo>Box_Parent_Folder__mdt</referenceTo>
        <relationshipLabel>Box Folders</relationshipLabel>
        <relationshipName>Box_Folders</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>Box Folder</label>
    <pluralLabel>Box Folders</pluralLabel>
</CustomObject>